--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.js"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/cors": "^1.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "elysia": "latest",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.6",
     "bun-types": "latest"
   },
   "module": "src/index.js"
