--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.0",
+    "cookies-next": "^4.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "elysia": "latest",
-    "pg": "^8.12.0"
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "pg": "^8.12.0",
+    "unique-string": "^3.0.0"
   },
   "devDependencies": {
     "@types/pg": "^8.11.6",
