--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dotenv": "^16.4.5",
     "elysia": "latest",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "unique-string": "^3.0.0"
   },
