--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "minio": "^8.0.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.7",
     "pg": "^8.12.0",
     "unique-string": "^3.0.0"
   },
